# CCIsland

./: .gitignore  README.md  README.zh-CN.md  install.sh  package.json  pnpm-lock.yaml  skills-lock.json  vercel.json
.claude/: settings.json
.claude/hooks/: feishu-notify.py
.claude/skills/setup-im-hook/: SKILL.md
.github/workflows/: release.yml  site.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
apps/cc-island/: package.json  tsconfig.json
apps/cc-island/src-tauri/: Cargo.toml  tauri.conf.json
apps/cc-island/src-tauri/capabilities/: default.json
apps/cc-island/src-tauri/icons/: icon.icns
apps/cc-island/src-tauri/src/: approval_manager.rs  hook_installer.rs  hook_router.rs  hook_server.rs  main.rs  shared_types.rs  tray.rs  window_state.rs
apps/site/: eslint.config.mjs  package.json  tsconfig.tsbuildinfo
apps/site/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/site/components/: copy-button.tsx  (+13 more)
changelog/: CHANGELOG.md
docs/: CCIsland - functional.md  CCIsland-AI-test-case.md  CCIsland-official-website-plan.md  CCIsland-structure.md  setup-im-hook.zh-CN.md
scripts/: release.sh
src-tauri/src/: hook_router.rs  main.rs  tray.rs  window_state.rs
src/main/: approval-manager.ts  chat-parser.ts  hook-installer.ts  hook-router.ts  hook-server.ts  index.ts  ipc-handlers.ts  session-state.ts  terminal-jumper.ts  tray.ts  window-manager.ts
src/renderer/: app.ts  index.html  preload.ts  styles.less  tauri-bridge.ts  window.d.ts
src/shared/: types.ts
(+16 files in other folders)
